# esd-test

./: .gitignore  README.md  pyproject.toml  tasks.txt  technical task
test_esd/: manage.py  secret_settings.py
test_esd/esd/: admin.py  apps.py  models.py  urls.py  views.py
test_esd/esd/fixtures/: questions.json
test_esd/esd/migrations/: 0001_initial.py  0002_alter_esdtest_image.py  0002_statistic_user.py
test_esd/esd/templates/esd/: about.html  base.html  esdquestion.html  esdtest.html  score.html  statistic.html
test_esd/service/: middleware.py
test_esd/static/css/: main_style.css
test_esd/test_esd/: asgi.py  settings.py  urls.py  wsgi.py
test_esd/users/: admin.py  forms.py  models.py  urls.py  views.py
test_esd/users/migrations/: 0001_initial.py  0002_alter_user_tab_number.py
test_esd/users/templates/registration/: login.html  registration.html
test_esd/users/templates/users/registration/: login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  registration.html
